Fix view on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@
 
 /* Smooth Scroll Behavior */
 html {
+    height: 100dvh;
     scroll-behavior: smooth;
 }
 
